# farmtrax

./: .envrc  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  devbox.json  run.sh
examples/: advanced_partitioning_example.cpp  main.cpp
include/farmtrax/: avoid.hpp  divy.hpp  field.hpp  field_old.hpp  graph.hpp  mesh.hpp  party.hpp  route.hpp
include/farmtrax/utils/: utils.hpp  visualize.hpp
misc/: PARTITIONING_IMPLEMENTATION_SUMMARY.md  field4.geojson  wur.geojson
old/: plan.hpp
test/: test_avoid.cpp  test_divy.cpp  test_field.cpp  test_graph.cpp  test_utils.cpp
